<resources>
    <string name="app_name">Aplikasi Perpustakaan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account"><font color="@android:color/black">Belum punya akun?</font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="nomor_telpon">Nomor Telepon</string>
    <string name="open_drawer">Buka Navigasi</string>
    <string name="close_drawer">Tutup Navigasi</string>
    <string-array name="drawer_menu_data">
        <item>Data Peminjaman</item>
        <item>Data Peminjaman Online</item>
        <item>Data Pengembalian</item>
        <item>Data Anggota</item>
        <item>Data Buku</item>
        <item>Data Buku Rusak</item>
        <item>Data Buku Masuk</item>
        <item>Data Buku Digital</item>
    </string-array>
    <dimen name="button_width">30dp</dimen>
    <dimen name="button_height">25dp</dimen>
    <dimen name="button_margin">2dp</dimen>
    <dimen name="button_margin_bottom">2dp</dimen>

</resources>